# tiny-3d

./: CMakeLists.txt  README.md
src/: array.c  array.h  camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  swap.c  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
